--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -64,6 +64,10 @@ p a {
   border-bottom: 2px solid var(--secondary);
 }
 
+img {
+  margin: 0;
+}
+
 button {
   appearance: none;
   background-color: var(--secondary);
@@ -104,9 +108,14 @@ input[type=email] {
   color: var(--white);
 }
 
-@media (min-width: 760px) {
+@media (min-width: 600px) {
   :root {
     --container-padding: 2rem;
+  }
+}
+
+@media (min-width: 760px) {
+  :root {
     --root-font-size: 16px;
   }
 }
